--- a/header_장예은.css
+++ b/header_장예은.css
@@ -128,7 +128,6 @@ nav > h1 > a > i {
   display: block;
   padding: 12px 0;
 }
-
 /*section css 시작*/
 section {
   padding: 60px 0;
@@ -215,7 +214,7 @@ section {
   display: flex;
   width: 88%;
   height: 78%;
-  background-image: url(./my_photo.jpg);
+  background-image: url(./img/my_photo.jpg);
   background-size: cover;
   justify-content: center;
   top: 23px;
@@ -249,6 +248,16 @@ section {
 }
 
 /*swiper css*/
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .slide1 {
   border: 1px solid blue;
 }
@@ -500,4 +509,35 @@ section {
   width: 35px;
   height: 20px;
   position: absolute;
+}
+@media (max-width: 367px) {
+  /*swiper block 처리*/
+
+  /*pr_box css*/
+  .pr_box .next1 {
+    visibility: hidden;
+  }
+  .pr_box .back_box::after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 88%;
+    height: 78%;
+    background-image: url(./img/my_photo.jpg);
+    background-size: cover;
+    justify-content: center;
+    top: 23px;
+    left: 15px;
+  }
+
+  /*footer css*/
+  .add_box .inner {
+    border-radius: 0;
+  }
+  .add_box .footing {
+    visibility: hidden;
+  }
+  .add_box .foot {
+    white-space: normal;
+  }
 }
