--- a/header_장예은.css
+++ b/header_장예은.css
@@ -182,6 +182,10 @@ section {
 }
 
 /*두번째 section pr_box css 시작*/
+.pr_box {
+  position: relative;
+  margin-bottom: 250px;
+}
 
 .pr_box > h2 > span {
   display: block;
@@ -249,8 +253,10 @@ section {
 
 /*swiper css*/
 .swiper {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  left: 0;
+  width: 70%;
+  margin-bottom: 130px;
 }
 .swiper-slide img {
   display: block;
